# mtl

./: .bazelrc  .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  MODULE.bazel  README.md  WORKSPACE  conanbuildinfo.cmake  conanfile.py  conaninfo.txt  graph_info.json  shell.nix
benchmark/: BUILD  CMakeLists.txt  algorithm.cpp  array.cpp
cmake/: Conan.cmake  RunConan.cmake  StaticAnalyzers.cmake
include/: CMakeLists.txt
include/mtl/: CMakeLists.txt  algorithm.hpp  dyn_array.hpp  hash_map.hpp  iterator.hpp  linked_list.hpp  maybe.hpp  memoize.hpp  move_only.hpp  pointers.hpp  result.hpp  static_array.hpp  string.hpp  types.hpp  wrapped_var.hpp
mtl/: BUILD  algorithm.hpp  dyn_array.hpp  hash_map.hpp  iterator.hpp  linked_list.hpp  maybe.hpp  move_only.hpp  pointers.hpp  result.hpp  static_array.hpp  types.hpp  view.hpp  wrapped_var.hpp
nn/: CMakeLists.txt  nn.cpp  nn.hpp
src/: WrappedVar.hpp  either.hpp  maybe.hpp  result.hpp  wrapped_var.hpp
src/containers/: static_array.hpp
test/: BUILD  CMakeLists.txt  WrappedVarTest.cpp  algorithm.cpp  dyn_array.cpp  either_test.cpp  iterator.cpp  maybe.cpp  maybe_test.cpp  pointers.cpp  result.cpp  result_test.cpp  static_array.cpp  test_algorithm.cpp  test_dyn_array.cpp  test_hash_map.cpp  test_iterator.cpp  test_linked_list.cpp  test_maybe.cpp  test_memoize.cpp  test_move_only.cpp  test_pointers.cpp  test_result.cpp  test_static_array.cpp  test_utils.hpp  test_view.cpp  test_wrapped_var.cpp  utils.hpp  wrapped_var.cpp  wrapped_var_test.cpp
test/nn/: CMakeLists.txt  main.cpp  nn.cpp  test_nn.cpp
